--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
+# Environment
 venv/
-__pycache__/
-.pytest_cache/
+env/
 .env
+.env.local
+
+# Authentication & State
+auth.json
 tests/auth.json
+state_store.json
+play_state.db
+rate_limit_state.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.pytest_cache/
+*.egg-info/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Debug & Testing
+*.log
+login_debug.png
+login_issue.png
+tests/artifacts/
+
+# Node modules
+node_modules/
+
+# OS
+.DS_Store
+Thumbs.db
