--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/fiber": "^9.4.2",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
