--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     dockerfilePath: ./Dockerfile
     region: oregon # or frankfurt
     plan: starter  # Disk requires at least the Starter plan
-    healthCheckPath: /api/health
+    healthCheckPath: /health
     disk:
       name: tsi-data
       mountPath: /app/data
@@ -24,5 +24,3 @@ services:
         value: /app/data/tsi_leads.db
       - key: PLAY_API_KEY
         sync: false
-      - key: PORT
-        value: 8080
