Add sessions to gitignore and fix Render branch to ishans-dashboard

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
   - type: web
     name: tsi-linkedin-automation
     runtime: docker
+    branch: ishans-dashboard  # Deploy from this branch, not main
     dockerfilePath: ./Dockerfile
     region: oregon
     plan: starter  # $7/month - required for persistent disk
